Fix the spacing in the Event list views

--- a/htdocs/sites/all/themes/mc_base/css/all.less
+++ b/htdocs/sites/all/themes/mc_base/css/all.less
@@ -766,7 +766,7 @@ a .ico-small {
     background-position:0 -20px;
   }
   #main .block-content .block {
-    margin:0 0 10px;
+    margin:0 0 20px;
   }
   #main #content-wrapper #content .node .groups {
     display:none;
